# group_12

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
group_12/: group_12.py
tests/: test_group_12.py
