[tool.poetry]
name = "group_12"
version = "0.1.0"
description = "A python package to process image"
authors = ["Rita Ni <niruidan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
